Added new files

--- a/graphics.html
+++ b/graphics.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset+"utf-8">
-    <title>Web Portfolio: Your Name</title>
+    <title>Unit 4: graphics.html</title>
   </head>
 
   <body>
