--- a/color.html
+++ b/color.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset+"utf-8">
-    <title>Web Portfolio: Your Name</title>
+    <title>Unit 2: Color</title>
   </head>
 
   <body>
