worked on index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset+"utf-8">
-    <title>Web Portfolio: Your Name</title>
+   <link type="text/css" rel="stylesheet" href="styles/stylesheet.css"/>
+   <meta charset="utf-8">
+   <title>Web Portfolio:Gabriel Zamora</title>
+   <h1>Web Portfolio</h1>
   </head>
-
   <body>
-  <!-- The content of your web page will go here -->
+    <div>
+     <a href="#main">&#9830;Skip to Main Content&#9830;</a>
+    </div>
+    <div>
+     <ul>
+      <li>Gabriel Zamora</li>
+      <li> <a href="mailto:gabriel.zamora@mustangsla.org">gabriel.zamora@mustangsla.org</a></li>
+     </ul>
+    </div>
+    <div>
+     <ul>
+      <li>Web design/Computer Lab</li>
+      <li>Mr.Lanus/ <a href="mailto:lanus@mustangsla.org">lanus@mustangsla.org</a></li>
+      <li> <a href="http://www.mustangsla.org/">Salesian Highschool</a>  2016-17</li>
+     </ul>
+    </div>
+   <nav>
+     <table width="100%">
+     <tbody>
+     <tr>
+      <td><a href="index.html"><span>Home</span></a></td>
+      <td><a href="color.html"><span>Color</span></a></td>
+      <td><a href="typography.html"><span>Typography</span></a></td>
+      <td><a href="designelements.html"><span>Design Elements</span></a></td>
+      <td><a href="graphics.html"><span>Graphics</span></a></td>
+      <td><a href="scripting.html"><span>Javascript</span></a></td>
+      <td><a href="usability.html"><span>Usability</span></a></td>
+      <td><a href="Publishing.html"><span>Publishing</span></a></td>
+     </tr>
+     </tbody>
+     </table>
+   </nav>
+   <main id="main">
+    <p style="font-size:24px; text-align:center">.</p>
+
+        <h1>Units we revise</h1>
+         <ul>
+          <li><h2>Unit 2:Creating Pages with HTML</h2></li>
+            <ol>
+              <li>What do you think are the most important vocabulary terms (or key concepts) in this unit? What do you think that they mean?
+                <ul><li>Some of the important terms that we have learned in this course
+                   wera bout the doctype and html. What Doctype is what tells the computer what
+                   certain language will be use in the coding. Html is one of
+                    the langeages of coding.</li></ul></li>
+              <li>What do you think are the most important skills that you learnedin this unit of study?
+                <ul><li>Coding and how to read HTML. Skills such that have to deal
+                   with editing text and appearances of my website. Doing all this
+                   by using codes to create headings, links, lists, and add images.
+                   Also using style coding in order to customize my text.</li></ul></li>
+              <li>In what ways have you gotten better at this kind of work?
+                <ul><li>Before taking this class, if I was shown anything to do
+                  with coding I'd have no idea what I was look at. After attending
+                  and growing my skills in the class I'd say I'm confident in the
+                  basics of HTML. So far it's easy to learn and understand. It has
+                  gotten easy to find the little errors I might make such as forgetting
+                  close a tag.</li></ul></li>
+              <li>In what ways do you think you need to improve?
+                <ul><li<> I remember the format to add links
+                  by heart as to not look back at lessons. Also to memorize the
+                  style coding on HTML for text.</li></ul></li>
+              <li>What problems did you encounter while you were working on this piece? How did you solve them?
+                <ul><li>None what so ever</li></ul></li>
+              <li>What was especially satisfying to you about either the process or the finished product?
+                <ul><li> Having to learn the codes
+                  to actually putting them into use. But seeing my process on my
+                  web page was very great.
+                   </li></ul></li>
+            </ol>
+          <li><h2>Unit 3:Formatting Web Pages with Style Sheets-color and Typogrophy</h2></li>
+            <p>this section will include <!--add more content here--></p>
+          <li><h2>Unit 4 Elements of Design: Shape, Uniformity, Repetition, Contrast, Space Alignment, and Proximity</h2></li>
+            <p>this section will include <!--add more content here--></p>
+          <li><h2>Unit 5:Graphics</h2></li>
+            <p>this section will include <!--add more content here--></p>
+          <li><h2>Unit 6:Scripting</h2></li>
+            <p>this section will include <!--add more content here--></p>
+          <li><h2>Unit 7:Quality Control</h2></li>
+            <p>this section will include <!--add more content here--></p>
+           <li><h2>Unit 8:Website Management and Authoring Tools</h2></li>
+            <p>this section will include <!--add more content here--></p>
+         </ul>
+     </main>
   </body>
 </html>
