Changed styles of HTML

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <link type="text/css" rel="stylesheet" href="styles/stylesheet.css"/>
    <meta charset="utf-8">
    <title>Web Portfolio:Gabriel Zamora</title>
-   <h1>Web Portfolio</h1>
+   <style>
+     body {
+       font-size: 1.1em;
+       font-weight: normal;
+       font-family: cursive , Sans_serif;
+       color: #000000; /*black*/
+       text-align: left;
+       margin: 0 auto;
+       max-width: 70%;
+       line-height: 1.5;
+     }
+     h1 {
+       font-size: 1.8em;
+       font-weight: bold;
+       color: #0000ff; /*blue*/
+       text-align: center;
+     }
+     h2{
+       color: red;
+     }
+
+     p{
+
+     }
+     ul{
+
+     }
+     li {
+
+     }
+   </style>
   </head>
+
   <body>
     <div>
      <a href="#main">&#9830;Skip to Main Content&#9830;</a>
     </div>
+
+    <h1>Web Portfolio</h1>
+
     <div>
+
      <ul>
       <li>Gabriel Zamora</li>
       <li> <a href="mailto:gabriel.zamora@mustangsla.org">gabriel.zamora@mustangsla.org</a></li>
@@ -20,7 +54,8 @@
      <ul>
       <li>Web design/Computer Lab</li>
       <li>Mr.Lanus/ <a href="mailto:lanus@mustangsla.org">lanus@mustangsla.org</a></li>
-      <li> <a href="http://www.mustangsla.org/">Salesian Highschool</a>  2016-17</li>
+      <li> <a href="http://www.mustangsla.org/">Salesian Highschool</a></li>
+      <li>2016-2017</li>
      </ul>
     </div>
    <nav>
@@ -33,14 +68,15 @@
       <td><a href="designelements.html"><span>Design Elements</span></a></td>
       <td><a href="graphics.html"><span>Graphics</span></a></td>
       <td><a href="scripting.html"><span>Javascript</span></a></td>
-      <td><a href="usability.html"><span>Usability</span></a></td>
+      <td>
+        <a href="usability.html"><span>Usability</span></a>
+      </td>
       <td><a href="Publishing.html"><span>Publishing</span></a></td>
      </tr>
      </tbody>
      </table>
    </nav>
    <main id="main">
-    <p style="font-size:24px; text-align:center">.</p>
 
         <h1>Units we revise</h1>
          <ul>
