Changing in colors

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
        color: #000000; /*black*/
        text-align: left;
        margin: 0 auto;
-       max-width: 70%;
+       max-width: 740%;
        line-height: 1.5;
      }
      h1 {
        font-size: 1.8em;
        font-weight: bold;
-       color: #0000ff; /*blue*/
+       color: #000000; /*black*/
        text-align: center;
      }
      h2{
