--- a/color.html
+++ b/color.html
@@ -3,9 +3,38 @@
   <head>
     <meta charset+"utf-8">
     <title>Unit 2: Color</title>
+     <link rel="stylesheet" href="styles/stylesheet.css" media="screen" title="no title">
   </head>
 
   <body>
-  <!-- The content of your web page will go here -->
-  </body>
+    <div>
+     <a href="#main">&#9830;Skip to Main Content&#9830;</a>
+    </div>
+
+    <h1>Unit 2: CSS & Color</h1>
+
+    <nav>
+      <table width="100%">
+      <tbody>
+      <tr>
+       <td><a href="index.html"><span>Home</span></a></td>
+       <td><a href="color.html"><span>Color</span></a></td>
+       <td><a href="typography.html"><span>Typography</span></a></td>
+       <td><a href="designelements.html"><span>Design Elements</span></a></td>
+       <td><a href="graphics.html"><span>Graphics</span></a></td>
+       <td><a href="scripting.html"><span>Javascript</span></a></td>
+       <td>
+         <a href="usability.html"><span>Usability</span></a>
+       </td>
+       <td><a href="Publishing.html"><span>Publishing</span></a></td>
+      </tr>
+      </tbody>
+      </table>
+    </nav>
+
+
+
+
+    </main>
+    </body>
 </html>
