--- a/index.html
+++ b/index.html
@@ -3,37 +3,7 @@
   <head>
    <meta charset="utf-8">
    <title>Web Portfolio:Gabriel Zamora</title>
-   <style>
-     body {
-       font-size: 1.1em;
-       font-weight: normal;
-       font-family: cursive , Sans_serif;
-       color: #000000; /*black*/
-       text-align: left;
-       margin: 0 auto;
-       max-width: 740%;
-       line-height: 1.5;
-     }
-     h1 {
-       font-size: 1.8em;
-       font-weight: bold;
-       color: #000000; /*black*/
-       text-align: center;
-     }
-     h2{
-       color: red;
-     }
-
-     p{
-
-     }
-     ul{
-
-     }
-     li {
-
-     }
-   </style>
+   <link rel="stylesheet" href="styles/stylesheet.css" media="screen" title="no title">
   </head>
 
   <body>
