Having to put in my pages and images

--- a/color.html
+++ b/color.html
@@ -32,9 +32,20 @@
       </table>
     </nav>
 
-
-
-
-    </main>
-    </body>
+    <main id='main'>
+      <div class="">
+        <h2><a href="images/medical_page.PNG">Meidcal Clinic</a></h2>
+        <img id='med' src="images/medical_image.PNG" alt="" />
+        <h3>Explanation</h3>
+        <p>
+          I chose these 2 colors which are red and white. Red and white would be the most common that when people mention medical they think or know already about these 2 colors. The red because of the red cross there is and it represents the taking people were they treat them. The white because of people would think for like an angel or been good.
+        </p>
+      </div>
+      <main id="main">
+      <div class="">
+        <h2><a href="images/kindergarten_page.PNG">Kindergarten Teacher</a></h2>
+        <img id="kin" src="images/kindergarten_image.PNG" alt="" />
+        <h3>Explanation</h3>
+        <p>
+          These would be the colors for a kindergarten teacher that would present her/him. These colors because when you hear the word "kinder" you think of small children. The colors the teacher would show to the kids and they would learn. 
 </html>
