--- a/typography.html
+++ b/typography.html
@@ -105,11 +105,111 @@ Also, take note of how I select for all the DIVs that have a class of 'weights'.
   <div id="weight5" class='weights'>This is font weight 5.</div>
 </div>
 
+<h2>Information Hierachy Assignment</h2>
+
+<h3>Hierarchy: Ordered Information</h3>
+<section>
+ <!-- Make each line below appear on its own separate line in the browser. -->
+ <p>
+   The Typography of Paul Rand <br>
+    with Lewis Blackwell <br>
+    Shattuck Hall - 7:00 pm <br>
+    March 30, 2011 <br>
+    Design Lecture Series <br>
+    Portland State University <br>
+    Art Department <br>
+    With wit and wisdom, Blackwell <br>
+    dissects the patterns of Rand's use of <br>
+    typography throughout his brands, <br>
+    book covers, and advertising work. <br>
+ </p>
+</section>
+
+<h3>Hierarchy: Logical Grouping</h3>
+<section>
+ <!-- Make each line below appear on its own separate line in the browser. Then, add spacing to group the information logically -->
+ <p>
+   The Typography of Paul Rand <br>
+   with Lewis Blackwell <br> <br>
+
+    Shattuck Hall - 7:00 pm <br>
+    March 30, 2011 <br> <br>
+
+  Design Lecture Series <br>
+  Portland State University <br>
+  Art Department <br> <br> <br>
+
+  With wit and wisdom, Blackwell <br>
+  dissects the patterns of Rand's use of <br>
+  typography throughout his brands, <br>
+  book covers, and advertising work. <br>
+ </p>
+</section>
+
+<h3>Hierarchy: Changing Weights</h3>
+<section>
+ <!-- Make each line below appear on its own separate line in the browser. Then, add spacing to group the information logically. Next, bold the title of the lecture, and reorganize your content according to the article's layout. -->
+ <p>
+
+Design Lecture Series <br>
+Portland State University <br>
+Art Department <br> <br>
+
+<strong>The Typography of Paul Rand</strong> <br>
+with Lewis Blackwell <br> <br>
+
+ Shattuck Hall - 7:00 pm <br>
+ March 30, 2011 <br> <br>
+
+  With wit and wisdom, Blackwell <br>
+  dissects the patterns of Rand's use of <br>
+  typography throughout his brands, <br>
+  book covers, and advertising work. <br>
+ </p>
+</section>
+
+<h3>Hierarchy: Changing Type Size</h3>
+<section>
+  <!-- Complete all steps above, then make the size of the lecture title to 1.6em -->
+  <p>
+    Design Lecture Series<br> Portland State University<br>Art Department<br><br><br><br></span><span id='target'><strong >The Typography of<br> Paul Rand </strong></span><br>with Lewis Blackwell<br><br><br> Shattuck Hall - 7:00 pm<br> March 30, 2011 <br><br><br> With wit and wisdom, Blackwell<br> dissects the patterns of Rand's use
+    of<br> typography throughout his brands,<br> book covers, and advertising work.
+  </p>
+</section>
+
+
+<h3>Hierarchy: Varying Alignment & Spacing</h3>
+<section>
+  <!-- CHALLENGE: Can you organize the text below in the same way as the fifth layout in the Typekit article? Give it a try! Organize each piece of content into its own div, and give classes to the divs you want to behave similarly. Style those divs with CSS. -->
+
+  <div class='indentdetails'>
+    <br><br><strong>Design Lecture Series </strong><br>Portland State University <br>Art Department
+  </div>
+
+
+  <div id='name'>
+
+    <div id='typ'>
+      <br>the typography of
+    </div>
+    <div id='Paul'>
+    <strong> Paul Rand</strong>
+</div>
+
+  </div>
+  <div id='lewis'>
+    with Lewis Blackwell
+  </div>
+
+  <div class='Shattuck'>
+    <br><br><strong>Shattuck Hall - 7:00 pm</strong><br><strong> March 30, 2011</strong>
+  </div>
 
 
 
+  <div class='indent'>
+    <br><br><br>With wit and wisdom, Blackwell dissects<br>
+     the patterns of Rand's use of typography<br> throughout his brands, book covers, and<br> advertising work.
+  </div>
 
-
-    </main>
-  </body>
- </html>
+</section>
