--- a/typography.html
+++ b/typography.html
@@ -228,3 +228,36 @@ Also, take note of how I select for all the DIVs that have a class of 'weights'.
   <div id="weight4" class='weights'>This is font weight 4.</div>
   <div id="weight5" class='weights'>This is font weight 5.</div>
 </div>
+
+</div>
+
+<!--
+  In this assignment, it is highly recommended that you separate your HTML text content into DIVs and/or SPANs, then give them unique ID attributes to style each group individually, or common CLASS attributes to style common groups of elements.
+  Remember, to target an element with an ID attribute in your stylesheet, use a hashtag (#) before the ID name. (If <div id="sample"></div>, then the selector is #sample).
+  To target an element with a CLASS attribute in your stylesheet, use a period (.) before the ID name. (If <div class="example"></div>, then the selector is .example).
+-->
+
+</div>
+
+<h3>Poster Assignment</h3>
+  <div id="grandCanyon">
+    Grand Canyon
+
+    <div id="top1" >
+      National Park
+    </div>
+
+    <div id="bottom1" >
+      277 miles long <br>
+      up to 18 miles wide over a mile deep
+    </div>
+
+    <div id="bottom2">
+      plan your visit: nps.gov/grca
+    </div>
+  </div>
+
+
+</main>
+</body>
+</html>
